--- a/package.json
+++ b/package.json
@@ -3,13 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@progress/kendo-licensing": "^1.2.0",
+    "@progress/kendo-react-form": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.5.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "material-ui": "^0.20.2",
+    "mongoose": "^5.13.2",
+    "razorpay": "^2.0.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-custom-scrollbars-2": "^4.4.0",
+    "react-dom": "^16.8.6",
+    "react-icons": "^4.2.0",
+    "react-is": "^16.8.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-stripe-elements": "^6.1.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.0",
+    "web-vitals": "^1.1.2",
+    "webpack-cli": "^4.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
